--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.4",
+    "fetch-jsonp": "^1.1.3",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.273",
     "gatsby-link": "^1.6.45",
