--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-remark": "^1.7.44",
     "lodash": "^4.17.10",
     "lodash-webpack-plugin": "^0.11.5",
+    "moment": "^2.22.2",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
     "react-disqus-comments": "^1.2.0",
